# Boltlang

./: CMakeLists.txt  README.md
src/: main.c
src/exec/: context.h  tree.h
src/syntax/: syntax.c  syntax.h
src/syntax/lang/: lang.c  lang.h
src/syntax/parsers/: object.c  object.h
src/syntax/search/: search.c  search.h
src/syntax/source/: source_file.c  source_file.h
src/types/: functions.h  types.c  types.h
src/util/: hash.c  hash.h  map.h
tests/: app.bolt
